--- a/libs/stack/stack-ui/src/components/Popover/popover.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Popover/popover.stories.mdx
@@ -49,6 +49,21 @@ export const Template = (args) => (
   </Story>
 </Canvas>
 
+## Bottom
+
+<Canvas>
+  <Story
+    name="Bottom"
+    args={{
+      placement: 'bottom',
+      variant: 'p',
+      offset: 20,
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
 ## Closes when interacting outside
 
 <Canvas>
