fix: focus order and focus container

--- a/libs/stack/stack-ui/src/components/Alerts/alerts.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Alerts/alerts.stories.mdx
@@ -173,6 +173,11 @@ export const Template = (args) => (
           )
         },
         {
+          button: {
+            href: '#',
+            as: 'a',
+            children: 'Consulter toutes les alertes'
+          },
           id: '2',
           title: 'Alert 2 title',
           'aria-label': 'Alert 2 aria',
