--- a/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
@@ -45,7 +45,17 @@ export const Template = (args) => {
 
 # Carousel
 
-#### Carousel component. More commonly used for a showcase of images.
+Carousel component. More commonly used for a showcase of images. When using the carousel component, you must import React Swiper CSS files
+
+```ts
+import 'swiper/css'
+import 'swiper/css/pagination'
+import 'swiper/css/a11y'
+import 'swiper/css/autoplay'
+import 'swiper/css/navigation'
+import 'swiper/css/mousewheel'
+import 'swiper/css/keyboard'
+```
 
 ## Props
 
