refactor: carousel component accessibility

--- a/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
@@ -2,17 +2,58 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs'
 import { ArgTypes } from '@storybook/blocks'
 import Carousel from './index'
 import Button from '../Button'
+import 'swiper/css'
+import 'swiper/css/navigation'
+import 'swiper/css/pagination'
+import 'swiper/css/autoplay'
+import { CarouselNextNavigationButton, CarouselPrevNavigationButton } from './components/CarouselNavigationButton'
+import { forwardRef } from 'react'
 
 <Meta
   title="Base Components/Carousel"
   component={Carousel}
   argTypes={{
-    navigationButtons: {
-      description: 'This prop allows the override of the button proposed in the default state',
+    a11y: {
+      description: "React Swiper's accessibility module parameters"
     },
-    slides: {
-      description: 'Slides takes in an array of object with an `id` and a `child` being a ReactNode',
+    children: {
+      description: 'Function looping through every alert and passing the current alert. Can be used for rendering all alerts wrapping `AlertsItem` in another component',
+      table: {
+        type: {
+          summary: '(slide: TCarouselSlideProps) => React.ReactNode'
+        },
+        defaultValue: {
+          summary: '(slide: TCarouselSlideProps) => <CarouselSlide {...slide />}'
+        }
+      }
     },
+    prevButton: {
+      description: 'Custom previous button component for the carousel. Falls back to an arrow button',
+      table: {
+        defaultValue: {
+          summary: 'CarouselPrevNavigationButton'
+        }
+      }
+    },
+    nextButton: {
+      description: 'Custom previous button component for the carousel. Falls back to an arrow button',
+      table: {
+        defaultValue: {
+          summary: 'CarouselNextNavigationButton'
+        }
+      }
+    },
+    modules: {
+      table: {
+        defaultValue: {
+          summary: "['A11y', 'Keyboard']"
+        },
+        type: {
+          summary: 'Array<A11y | Autoplay | Controller | EffectCoverflow | EffectCube | EffectFade | EffectFlip | EffectCreative | EffectCards | HashNavigation | History | Keyboard | Lazy | Mousewheel | Navigation | Pagination | Parallax | Scrollbar | Thumbs | Virtual | Zoom | FreeMode | Grid | Manipulation>'
+        }
+      },
+      description: 'String list of modules the swiper will automatically import'
+    }
   }}
   parameters={{
     layout: 'fullscreen',
@@ -21,21 +62,32 @@ import Button from '../Button'
     slides: [
       {
         id: 1,
-        child: <div>Slide 1</div>,
+        ariaLabel: 'Slide 1 aria label',
+        children: <div>Slide 1</div>,
       },
       {
         id: 2,
-        child: <div>Slide 2</div>,
+        title: 'Slide 2 title',
+        children: <div>Slide 2</div>,
       },
       {
         id: 3,
-        child: <div>Slide 3</div>,
+        children: <div>Slide 3</div>,
       },
       {
         id: 4,
-        child: <div>Slide 4</div>,
+        ariaLabel: 'Slide 4 aria label',
+        title: 'Slide 4 title',
+        children: <div>Slide 4</div>,
       },
     ],
+    onNavigationPrev: () => console.log('Navigated to previous slide'),
+    onNavigationNext: () => console.log('Navigated to next slide'),
+    a11y: {
+      nextSlideMessage: 'Next alert',
+      prevSlideMessage: 'Previous alert',
+      paginationBulletMessage: 'Navigate to slide number {{index}}'
+    },
   }}
 />
 
@@ -45,11 +97,27 @@ export const Template = (args) => {
 
 # Carousel
 
-#### Carousel component. More commonly used for a showcase of images.
+Carousel component. More commonly used for a showcase of images.
 
 ## Props
 
-<ArgTypes />
+<ArgTypes
+  include={[
+    'slides',
+    'a11y',
+    'nextButton',
+    'prevButton',
+    'themeName',
+    'tokens',
+    'customTheme',
+    'as',
+    'onSwiper',
+    'onNavigationPrev',
+    'onNavigationNext',
+    'children',
+    'modules',
+  ]}
+ />
 
 ## Showcase
 
@@ -57,11 +125,10 @@ export const Template = (args) => {
 
 <Canvas>
   <Story
-    name="Carousel"
+    name="Basic"
     args={{
-      id: 1,
-      navigation: true,
       slidesPerView: 2,
+      modules: ['Navigation']
     }}
   >
     {Template.bind({})}
@@ -74,9 +141,8 @@ export const Template = (args) => {
   <Story
     name="Carousel with autoplay"
     args={{
-      id: 2,
+      modules: ['Autoplay', 'Navigation', 'Pagination'],
       autoplay: true,
-      navigation: true,
     }}
   >
     {Template.bind({})}
@@ -89,9 +155,8 @@ export const Template = (args) => {
   <Story
     name="Carousel with infinite looping"
     args={{
-      id: 3,
       loop: true,
-      navigation: true,
+      modules: ['Navigation'],
     }}
   >
     {Template.bind({})}
@@ -104,67 +169,22 @@ export const Template = (args) => {
   <Story
     name="Carousel with pagination"
     args={{
-      id: 4,
-      slides: [
-        {
-          id: 1,
-          child: (
-            <div>
-              Slide 1<br />
-              &#x200B;
-            </div>
-          ),
-        },
-        {
-          id: 2,
-          child: (
-            <div>
-              Slide 2<br />
-              &#x200B;
-            </div>
-          ),
-        },
-        {
-          id: 3,
-          child: (
-            <div>
-              Slide 3<br />
-              &#x200B;
-            </div>
-          ),
-        },
-        {
-          id: 4,
-          child: (
-            <div>
-              Slide 4<br />
-              &#x200B;
-            </div>
-          ),
-        },
-      ],
-      pagination: {
-        clickable: true,
-      },
-      navigation: false,
+      modules: ['Pagination'],
     }}
   >
     {Template.bind({})}
   </Story>
 </Canvas>
 
-### Carousel with custom buttons
+### Carousel with custom navigation
 
 <Canvas>
   <Story
-    name="Carousel custom buttons"
+    name="Carousel custom navigation"
     args={{
-      id: 4,
-      navigation: true,
-      navigationButtons: {
-        leftButton: <Button>Previous slide</Button>,
-        rightButton: <Button>Next slide</Button>,
-      },
+      modules: ['Navigation'],
+      prevButton: forwardRef((props, ref) => <CarouselPrevNavigationButton {...props} ref={ref}>Previous slide</CarouselPrevNavigationButton>),
+      nextButton: forwardRef((props, ref) => <CarouselNextNavigationButton {...props} ref={ref}>Next slide</CarouselNextNavigationButton>),
     }}
   >
     {Template.bind({})}
