fix: only slides that are not visible are unfocusable

--- a/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Carousel/carousel.stories.mdx
@@ -167,6 +167,7 @@ import 'swiper/css/keyboard'
     args={{
       id: 3,
       modules: ['Navigation'],
+      slidesPerView: 2,
       slides: [
         {
           id: 1,
