docs: alerts nav button -> carousel nav button

--- a/libs/stack/stack-ui/src/components/Alerts/alerts.stories.mdx
+++ b/libs/stack/stack-ui/src/components/Alerts/alerts.stories.mdx
@@ -54,7 +54,7 @@ import 'swiper/css/autoplay'
       description: 'Custom previous button component for the carousel. Falls back to an arrow button',
       table: {
         defaultValue: {
-          summary: 'AlertsNavigationButton'
+          summary: 'CarouselPrevNavigationButton'
         }
       }
     },
@@ -62,7 +62,7 @@ import 'swiper/css/autoplay'
       description: 'Custom previous button component for the carousel. Falls back to an arrow button',
       table: {
         defaultValue: {
-          summary: 'AlertsNavigationButton'
+          summary: 'CarouselNextNavigationButton'
         }
       }
     },
